#summary Release Notes

= Release Notes =

== Release 1.8.7 ==
  * Attempt board shows referee decisions.
  
== Release 1.8.6 ==
  * Changes made to plate loading information are propagated to all plate loading subwindows and to attempt board.
  
== Release 1.8.5 ==
  * (1.8.5-a) Fixed Exception in Start Sheet when a group had no start or end time
  * (1.8.5-a) Fixed default communication port for NEC display.
  * Location of team templates moved to a team sub-directory, only name shown in dropdown
  * Restored Points and Ranking button on results page (fixed regression introduced in 1.8.2)
  * Fix for obscure bug with 2-minute rule that only showed up if announcer acts as timekeeper ("start time on announce" option).
  * Clean-up of push behavior so that the push() method is not called involuntarily in constructors.
  * Removal of all vestiges of polling.
  * Documentation reorganized.
  * merged jetty and tomcat configurations (widgetset located in Maven src instead of target)

== Release 1.8.4 ==
  * Improved behavior when refreshing public address display (cleanup of listeners)
  * Support for Vaadin 6.5

== Release 1.8.3 ==
  * Display public message on demand, overlaid over result boards.  Typically used between sessions or during pauses.
  * Fixed Jetty configuration issue relative to serial communication native library.
  * Cosmetic fixes to Start List

== Release 1.8.2 ==
  * Show officials on result sheet.
  * Editing competition session information, officials in particular
  * Can again reload competition data from old spreadsheets.
  * Further Maven changes to follow testing conventions

== Release 1.8.1 ==
  * Change in source layout to run under Maven
  * Small fixes to run under Maven jetty:run plugin (ICEpush causes exception if called in class constructor)
  * Time display now shows referee decisions after 3 seconds.